--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h1 class="text-3xl sm:text-4xl font-bold mb-6 text-center">📖 Story Portal</h1>
     <ul id="story-list" class="space-y-4">
       <!-- story links injected here -->
+	  <li>
+		<a href="stories/simple-cystitis.jsx">Simple Cystitis in a Young Woman</a>
+	  </li>
     </ul>
   </div>
   <script>
