--- a/story.html
+++ b/story.html
@@ -2,141 +2,258 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Story Engine</title>
-  <!-- Tailwind CSS CDN -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Custom styles -->
-  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
-  <div class="max-w-xl mx-auto px-4 py-6">
-    <a href="index.html" class="inline-block mb-6 text-blue-600 hover:underline">← Back to Stories</a>
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6">
+    <a href="index.html" class="text-blue-600 hover:underline mb-4 inline-block">← Back to Stories</a>
     <div id="app" class="space-y-6"></div>
   </div>
 
-  <!-- Modal -->
-  <div id="modal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center p-4">
-    <div class="bg-white border-2 border-blue-200 shadow-xl rounded-lg w-full max-w-lg overflow-auto">
-      <div class="flex items-center gap-2 text-blue-800 p-4 border-b">
-        <span id="modal-title" class="flex items-center gap-2 text-xl font-semibold"></span>
-        <button id="modal-close" class="ml-auto text-gray-500 hover:text-gray-800">✕</button>
+  <!-- Modal for drug info -->
+  <div id="modal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-lg shadow-xl p-4 w-11/12 max-w-md">
+      <div class="flex items-center mb-2">
+        <span id="modal-title" class="text-lg font-semibold text-blue-800 flex-1"></span>
+        <button id="modal-close" class="text-gray-500 hover:text-gray-800">✕</button>
       </div>
-      <div id="modal-content" class="p-4 text-sm text-gray-800"></div>
+      <div id="modal-content" class="whitespace-pre-wrap text-sm text-gray-800 max-h-60 overflow-y-auto"></div>
     </div>
   </div>
 
   <script>
-    // Get story ID from URL
+  (async function(){
+    //— load storyId from URL
     const params = new URLSearchParams(window.location.search);
-    const storyId = params.get('story') || '';
-    let scenarios = {}, drugInfo = {};
+    const storyId = params.get('story') || 'mssa-mayhem';
 
-    // Helper to create SVG icon
-    function createSVG(html) {
-      const tpl = document.createElement('template');
-      tpl.innerHTML = html.trim();
-      return tpl.content.firstChild;
+    //— fetch the JSON
+    const res = await fetch(`stories/${encodeURIComponent(storyId)}.json`);
+    if (!res.ok) {
+      document.getElementById('app').innerHTML =
+        `<div class="text-red-600">Could not load story “${storyId}”.</div>`;
+      return;
     }
-    const InfoIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-blue-600 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    const story = await res.json();
+    const { scenarios, drugInfo, quiz, summary } = story;
+
+    //— globals
+    let current = 'OPT0';
+    let inQuiz  = false;
+    let answers = {};
+
+    //— utility to create SVG
+    function svg(html){ 
+      const t = document.createElement('template');
+      t.innerHTML = html.trim(); 
+      return t.content.firstChild;
+    }
+    const InfoSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 ml-1 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M13 16h-1v-4h-1m1-4h.01M12 2.25c5.385 0 9.75 4.365 9.75 9.75S17.385 21.75 12 21.75 2.25 17.385 2.25 12 6.615 2.25 12 2.25z" />
-    </svg>`;
-    const ShieldIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-green-600 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M9 12l2 2 4-4m1-2a9 9 0 11-8 0v5a2 2 0 002 2h4a2 2 0 010 0V6z" />
+        d="M13 16h-1v-4h-1m1-4h.01M12 2.25c5.385 0
+           9.75 4.365 9.75 9.75S17.385 21.75 12 21.75
+           2.25 17.385 2.25 12 6.615 2.25 12 2.25z" />
     </svg>`;
 
-    // Modal logic
+    const ShieldSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-green-600 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 12l2 2 4-4m1-2a9 9 0
+           11-8 0v5a2 2 0 002 2h4a2 2 0 010 0V6z" />
+    </svg>`;
+
+    //— modal controls
     const modal = document.getElementById('modal');
-    const modalTitle = document.getElementById('modal-title');
-    const modalContent = document.getElementById('modal-content');
-    document.getElementById('modal-close').addEventListener('click', () => modal.classList.add('hidden'));
-
-    function showModal(drug) {
-      const info = drugInfo[drug]; if (!info) return;
-      const html = `
-        <strong class="text-lg">${drug}</strong>
-        <ul class="list-disc ml-5 mt-2">
+    document.getElementById('modal-close').onclick = ()=> modal.classList.add('hidden');
+    function showModal(title, info){
+      const mt = document.getElementById('modal-title');
+      const mc = document.getElementById('modal-content');
+      mt.textContent = '';
+      mt.append(svg(ShieldSVG), document.createTextNode(' '+ title +' Info'));
+      mc.innerHTML = `<p class="font-semibold">${title}</p>
+        <ul class="list-disc ml-5">
           <li><strong>Spectrum:</strong> ${info.Spectrum}</li>
           <li><strong>PK:</strong> ${info.PK}</li>
           <li><strong>Toxicities:</strong> ${info.Toxicities}</li>
-        </ul>
-      `;
-      modalTitle.textContent = '';
-      modalTitle.append(createSVG(ShieldIconSVG), document.createTextNode(' ' + drug + ' Info'));
-      modalContent.innerHTML = html;
+        </ul>`;
       modal.classList.remove('hidden');
     }
 
-    // Load story JSON (scenarios + drugInfo)
-    fetch(`stories/${storyId}.json`)
-      .then(r => r.ok ? r.json() : Promise.reject('Story not found'))
-      .then(data => {
-        scenarios = data.scenarios;
-        drugInfo = data.drugInfo;
-        current = 'OPT0';
-        render();
-      })
-      .catch(err => {
-        console.error(err);
-        document.getElementById('app').innerHTML = `<div class="text-red-600 p-4">Could not load story '${storyId}'.</div>`;
-      });
-
-    let current = 'OPT0';
-    function render() {
+    //— render story screen
+    function renderStory(){
+      inQuiz = false;
       const app = document.getElementById('app');
       app.innerHTML = '';
-      const sc = scenarios[current] || { text: 'Unknown scene', options: [] };
+      const sc  = scenarios[current];
 
-      // Build regex for drug highlights
-      const keys = Object.keys(drugInfo).map(k => k.replace(/[-/\\^$*+?.()|[\]{}]/g, '\\$&'));
-      const regex = new RegExp(`\\b(${keys.join('|')})\\b`, 'g');
-
-      // Render story text
+      // text card
       const card = document.createElement('div');
-      card.className = 'bg-white shadow rounded p-6 text-base sm:text-lg whitespace-pre-wrap';
-      sc.text.split(regex).forEach(part => {
-        if (drugInfo[part]) {
-          const btn = document.createElement('button');
-          btn.className = 'inline-flex items-center text-blue-600 hover:text-blue-800 underline';
-          btn.textContent = part;
-          btn.append(createSVG(InfoIconSVG));
-          btn.addEventListener('click', () => showModal(part));
-          card.append(btn);
-        } else {
-          card.append(document.createTextNode(part));
-        }
-      });
+      card.className = 'bg-white p-6 rounded shadow text-lg whitespace-pre-wrap';
+      // inline drug highlights
+      sc.text.split(new RegExp(`(${Object.keys(drugInfo).join('|')})`, 'g'))
+        .forEach((part, i)=>{
+          if (drugInfo[part]){
+            const btn = document.createElement('button');
+            btn.className = 'inline-flex items-center text-blue-600 hover:underline';
+            btn.textContent = part;
+            btn.append(svg(InfoSVG));
+            btn.onclick = ()=> showModal(part, drugInfo[part]);
+            card.append(btn);
+          } else {
+            card.append(document.createTextNode(part));
+          }
+        });
       app.append(card);
 
-      // Render options vertical, option then info
-      const optsContainer = document.createElement('div');
-      optsContainer.className = 'flex flex-col space-y-3 mt-4';
-      sc.options.forEach(optObj => {
-        const { id, text } = optObj;
+      // buttons
+      const opts = document.createElement('div');
+      opts.className = 'flex flex-col space-y-3';
+      const hasRestart = sc.options.some(o=> o.id==='OPT0');
+      sc.options.forEach(o=>{
         const row = document.createElement('div');
-        row.className = 'flex items-center space-x-2';
-
-        // Option button
-        const btn = document.createElement('button');
-        btn.className = 'flex-1 bg-blue-500 hover:bg-blue-600 text-white py-2 rounded text-center';
-        btn.textContent = text;
-        btn.addEventListener('click', () => { current = id; render(); });
-        row.append(btn);
-
-        // Info button if drugInfo exists
-        if (drugInfo[text]) {
+        row.className = 'flex';
+        // option
+        const b = document.createElement('button');
+        b.className = 'flex-1 bg-blue-500 hover:bg-blue-600 text-white py-2 rounded';
+        b.textContent = o.text;
+        b.onclick = ()=>{
+          current = o.id;
+          renderStory();
+        };
+        row.append(b);
+        // info
+        if (drugInfo[o.text]){
           const ib = document.createElement('button');
-          ib.className = 'inline-flex items-center border border-blue-500 hover:bg-blue-50 px-3 py-1 rounded';
-          ib.innerHTML = ShieldIconSVG + 'Info';
-          ib.addEventListener('click', () => showModal(text));
+          ib.className = 'ml-2 inline-flex items-center border border-blue-500 hover:bg-blue-50 px-3 py-1 rounded';
+          ib.innerHTML = ShieldSVG + 'Info';
+          ib.onclick = ()=> showModal(o.text, drugInfo[o.text]);
           row.append(ib);
         }
-        optsContainer.append(row);
+        opts.append(row);
       });
-      app.append(optsContainer);
+
+      // “Take Quiz” if this is an end-screen and quiz exists
+      if (hasRestart && quiz){
+        const qbtn = document.createElement('button');
+        qbtn.textContent = 'Take Quiz';
+        qbtn.className = 'mt-4 bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded';
+        qbtn.onclick = renderQuiz;
+        opts.append(qbtn);
+      }
+      app.append(opts);
     }
+
+    //— render quiz screen
+    function renderQuiz(){
+      inQuiz = true;
+      answers = {};
+      const app = document.getElementById('app');
+      app.innerHTML = '';
+      const form = document.createElement('form');
+      form.className = 'space-y-6 bg-white p-6 rounded shadow';
+
+      quiz.choices.forEach(q=>{
+        const block = document.createElement('div');
+        // question
+        const qel = document.createElement('p');
+        qel.className = 'font-semibold';
+        qel.textContent = q.question;
+        block.append(qel);
+        // options
+        q.options.forEach(opt=>{
+          const label = document.createElement('label');
+          label.className = 'inline-flex items-center mr-4';
+          const inp = document.createElement('input');
+          inp.type = 'radio';
+          inp.name = q.id;
+          inp.value = opt;
+          inp.className = 'mr-2';
+          label.append(inp, document.createTextNode(opt));
+          block.append(label);
+        });
+        form.append(block);
+      });
+
+      const submit = document.createElement('button');
+      submit.textContent = 'Submit Quiz';
+      submit.type = 'submit';
+      submit.className = 'bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded';
+      form.append(submit);
+
+      form.onsubmit = e=>{
+        e.preventDefault();
+        // collect answers
+        quiz.choices.forEach(q=>{
+          const val = form[q.id].value;
+          answers[q.id] = val;
+        });
+        renderQuizResults();
+      };
+
+      app.append(form);
+    }
+
+    //— render quiz results + summary button
+    function renderQuizResults(){
+      const app = document.getElementById('app');
+      app.innerHTML = '';
+      quiz.choices.forEach(q=>{
+        const block = document.createElement('div');
+        block.className = 'mb-4';
+        const qel = document.createElement('p');
+        qel.className = 'font-semibold';
+        qel.textContent = q.question;
+        block.append(qel);
+        const user = answers[q.id];
+        const correct = q.correct;
+        const result = document.createElement('p');
+        if (user === correct) {
+          result.textContent = `✔ Correct (${user})`;
+          result.className = 'text-green-600';
+        } else {
+          result.textContent = `✖ You picked "${user || '—'}", correct is "${correct}"`;
+          result.className = 'text-red-600';
+        }
+        block.append(result);
+        app.append(block);
+      });
+
+      // summary button if available
+      if (summary){
+        const sb = document.createElement('button');
+        sb.textContent = 'Show Summary';
+        sb.className = 'mt-2 bg-indigo-500 hover:bg-indigo-600 text-white py-2 px-4 rounded';
+        sb.onclick = renderSummary;
+        app.append(sb);
+      }
+    }
+
+    //— render summary screen
+    function renderSummary(){
+      const app = document.getElementById('app');
+      app.innerHTML = '';
+      const card = document.createElement('div');
+      card.className = 'bg-white p-6 rounded shadow space-y-2';
+      const h = document.createElement('h2');
+      h.className = 'text-xl font-semibold';
+      h.textContent = 'Key Summary Points';
+      card.append(h);
+      summary.points.forEach(pt=>{
+        const li = document.createElement('p');
+        li.className = 'flex items-start';
+        li.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-green-600 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+        </svg>${pt}`;
+        card.append(li);
+      });
+      app.append(card);
+    }
+
+    //— start
+    renderStory();
+
+  })();
   </script>
 </body>
 </html>
